--- a/railway.toml
+++ b/railway.toml
@@ -7,6 +7,7 @@ builder = "nixpacks"
 name = "backend"
 root = "backend"
 buildPath = "backend"
+startCommand = "/bin/bash -c \"source activate brep_mfr && uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}\""
 
 [services.build]
 builder = "docker"
