--- a/backend/environment.yml
+++ b/backend/environment.yml
@@ -17,6 +17,6 @@ dependencies:
     - python-multipart
     - supabase
     - numpy==1.23.5
-    - pytorch-lightning==1.7.1
+    - pytorch-lightning>=1.7.1
     - torch-geometric==2.3.1
     - fairseq==0.12.2
