--- a/backend/environment.yml
+++ b/backend/environment.yml
@@ -17,6 +17,8 @@ dependencies:
     - python-multipart
     - supabase
     - numpy==1.23.5
-    - pytorch-lightning>=1.7.1
+    - pytorch-lightning==1.8.6
+    - omegaconf==2.0.6
+    - torchmetrics==0.9.3
     - torch-geometric==2.3.1
     - fairseq==0.12.2
